--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   </head>
   <body>
     <!-- hero Section start -->
-
+  
+    <a class="gotop" href="#"><i class="fa-solid fa-arrow-up"></i></a>
+    
     <div class="hero">
       <nav>
         <h2 class="logo">Portfo<span>lio</h2>
