--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <h2 class="logo">Portfo<span>lio</h2>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#about-me">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact-us">Contact Us</a></li>
         </ul>
         <a href="#" class="btn">Subscribe</a>
       </nav>
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <section class="about">
+    <section class="about" id="about-me">
       <div class="main">
         <img src="img/background.jpg" alt="background" width="500px">
         <div class="about-text">
@@ -61,7 +61,7 @@
       </div>
     </section>
     <!-- servuce section start -->
-    <div class="service">
+    <div class="service" id="services">
       <div class="title">
         <h2>Our services</h2>
       </div>
@@ -106,13 +106,13 @@
     </div>
 
     <!-- Contact Me -->
-    <div class="contact-me">
+    <div class="contact-me" id="skills">
       <p>Let Me Get You A Beautiful Website.</p>
       <a class="button-two" href="#">Hire Me</a>
     </div>
 
     <!-- footer start -->
-    <footer>
+    <footer id="contact-us">
       <p>Keith Garces</p>
       <p>For more HTML, CSS and other coding questions and assistance, please do not hesitate to reach out with me!</p>
       <div class="social">
