--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
       <p>Keith Garces</p>
       <p>For more HTML, CSS and other coding questions and assistance, please do not hesitate to reach out with me!</p>
       <div class="social">
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="mailto: imkeithgarces@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/imkeithgarces/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://twitter.com/keithgprogram_"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://dribbble.com/keithgarces_"><i class="fa-brands fa-dribbble"></i></a>
+        <a href="https://www.behance.net/kg_"><i class="fa-brands fa-behance"></i></a>
       </div>
       <p class="end">Copyright by Keith Garces</p>
     </footer>
