--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <script>
     const { useState } = React;
 
-    const apiKey = ""; // Provided by environment
+    const apiKey = "AIzaSyCc90MRgdkSEQE-gPiBPI0VMBATbNSRvzY"; // Provided by environment
 
     const App = () => {
       const [filter, setFilter] = useState('All');
