--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         React.createElement('section', { id: 'portfolio', className: 'w-full py-20 px-6' },
           React.createElement('div', { className: 'max-w-6xl mx-auto' },
             React.createElement('div', { className: 'text-center mb-12' },
-              React.createElement('h2', { className: 'text-3xl font-bold mb-4' }, 'Portfolio & Social Media'),
+              React.createElement('h2', { className: 'text-3xl font-bold mb-4' }, 'My portfolio'),
               React.createElement('p', { className: 'text-slate-500' }, 'Check out my work or try my AI content brainstorming tool below!')
             ),
             React.createElement('div', { className: 'bg-white rounded-3xl p-8 shadow-sm border border-slate-100 mb-16 max-w-3xl mx-auto' },
