Move AI Assistant chat box below services grid section

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                   )
                 )
               ),
-              // AI Assistant Chat Simulation
-              React.createElement('div', { className: 'bg-slate-900 rounded-3xl p-6 text-white flex flex-col h-[500px] shadow-2xl relative overflow-hidden lg:mt-24' },
+              // AI Assistant Chat Simulation - Moved below services
+              React.createElement('div', { className: 'bg-slate-900 rounded-3xl p-6 text-white flex flex-col h-[500px] shadow-2xl relative overflow-hidden mt-12 col-span-full' },
                 React.createElement('div', { className: 'absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500' }),
                 React.createElement('div', { className: 'flex items-center space-x-3 mb-6' },
                   React.createElement('div', { className: 'w-10 h-10 bg-blue-600 rounded-full flex items-center justify-center', dangerouslySetInnerHTML: { __html: svgIcon('sparkles') } }),
