--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
                   list: ['Desktop or network troubleshooting & setup', 'Integration assistance & automation', 'System monitoring & optimization', 'API integration and troubleshooting'] 
                 }
               ].map((service, i) =>
-                React.createElement('div', { key: i, className: 'bg-blue-50/30 border border-blue-100 rounded-2xl p-8 hover:border-blue-300 transition-colors' },
+                React.createElement('div', { key: i, className: 'bg-blue-50/30 border border-blue-100 rounded-2xl p-8 hover:border-blue-300 transition-colors flex flex-col items-center text-center' },
                   React.createElement('div', { className: 'w-14 h-14 bg-blue-600 rounded-xl flex items-center justify-center mb-6', dangerouslySetInnerHTML: { __html: service.icon } }),
                   React.createElement('h3', { className: 'text-xl font-semibold text-slate-900 mb-4' }, service.title),
-                  React.createElement('ul', { className: 'space-y-3 text-sm text-slate-700' },
+                  React.createElement('ul', { className: 'space-y-3 text-sm text-slate-700 w-full' },
                     service.list.map((item, j) =>
-                      React.createElement('li', { key: j, className: 'flex items-start space-x-2' },
+                      React.createElement('li', { key: j, className: 'flex items-center justify-center space-x-2' },
                         React.createElement('svg', { className: 'w-4 h-4 text-blue-600 mt-0.5 flex-shrink-0', fill: 'currentColor', viewBox: '0 0 20 20' },
                           React.createElement('path', { fillRule: 'evenodd', d: 'M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z', clipRule: 'evenodd' })
                         ),
