--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                   React.createElement('div', { className: 'flex justify-center mb-6' },
                     React.createElement('div', { className: 'w-14 h-14 bg-blue-600 rounded-xl flex items-center justify-center', dangerouslySetInnerHTML: { __html: service.icon } })
                   ),
-                  React.createElement('h3', { className: 'text-xl font-semibold text-slate-900 mb-4' }, service.title),
+                  React.createElement('h3', { className: 'text-xl font-semibold text-slate-900 mb-4 text-center' }, service.title),
                   React.createElement('ul', { className: 'space-y-3 text-sm text-slate-700' },
                     service.list.map((item, j) =>
                       React.createElement('li', { key: j, className: 'flex items-start space-x-2' },
