--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       const [userMessage, setUserMessage] = useState('');
 
       const portfolioItems = [
-        { id: 1, category: 'Instagram', title: 'Product Launch Graphics', description: 'Social media strategy for an e-commerce brand launch.', color: 'bg-blue-50' },
+        { id: 1, category: 'Instagram', title: 'Product Launch Graphics', description: 'Social media strategy for an e-commerce brand launch.', color: 'bg-blue-50', image: 'https://images.unsplash.com/photo-1592286927505-c80a4eb90fe6?w=400&h=300&fit=crop' },
         { id: 2, category: 'Facebook', title: 'Community Engagement', description: 'Curated posts for a tech support community group.', color: 'bg-blue-100' },
         { id: 3, category: 'Ads', title: 'Shopify Sales Campaign', description: 'High-converting ad copy and creative designs.', color: 'bg-blue-50' },
         { id: 4, category: 'Instagram', title: 'Lifestyle Brand Feed', description: 'Grid planning and aesthetic curation for fashion VA.', color: 'bg-blue-100' },
@@ -411,12 +411,16 @@
             React.createElement('div', { className: 'grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8' },
               filteredItems.map((item) =>
                 React.createElement('div', { key: item.id, className: 'group bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-xl transition-all border border-slate-100' },
-                  React.createElement('div', { className: `h-40 ${item.color} flex items-center justify-center p-8 transition-transform group-hover:scale-105` },
-                    React.createElement('div', { className: 'w-full h-full border-2 border-dashed border-blue-200 rounded-lg flex flex-col items-center justify-center text-blue-300' },
-                      React.createElement('div', { className: 'w-8 h-8 mb-2', dangerouslySetInnerHTML: { __html: svgIcon('layout') } }),
-                      React.createElement('span', { className: 'text-[10px] font-bold uppercase tracking-widest' }, item.category)
-                    )
-                  ),
+                  item.image ? 
+                    React.createElement('div', { className: 'h-40 overflow-hidden bg-slate-100' },
+                      React.createElement('img', { src: item.image, alt: item.title, className: 'w-full h-full object-cover transition-transform group-hover:scale-105' })
+                    ) :
+                    React.createElement('div', { className: `h-40 ${item.color} flex items-center justify-center p-8 transition-transform group-hover:scale-105` },
+                      React.createElement('div', { className: 'w-full h-full border-2 border-dashed border-blue-200 rounded-lg flex flex-col items-center justify-center text-blue-300' },
+                        React.createElement('div', { className: 'w-8 h-8 mb-2', dangerouslySetInnerHTML: { __html: svgIcon('layout') } }),
+                        React.createElement('span', { className: 'text-[10px] font-bold uppercase tracking-widest' }, item.category)
+                      )
+                    ),
                   React.createElement('div', { className: 'p-6' },
                     React.createElement('h3', { className: 'font-bold text-lg mb-2' }, item.title),
                     React.createElement('p', { className: 'text-sm text-slate-500' }, item.description)
