--- a/index.html
+++ b/index.html
@@ -411,16 +411,15 @@
             React.createElement('div', { className: 'grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8' },
               filteredItems.map((item) =>
                 React.createElement('div', { key: item.id, className: 'group bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-xl transition-all border border-slate-100' },
-                  item.image ? 
-                    React.createElement('div', { className: 'h-40 overflow-hidden bg-slate-100' },
+                  React.createElement('div', { className: item.image ? 'h-40 overflow-hidden bg-slate-100' : `h-40 ${item.color} flex items-center justify-center p-8 transition-transform group-hover:scale-105` },
+                    item.image ? 
                       React.createElement('img', { src: item.image, alt: item.title, className: 'w-full h-full object-cover transition-transform group-hover:scale-105' })
-                    ) :
-                    React.createElement('div', { className: `h-40 ${item.color} flex items-center justify-center p-8 transition-transform group-hover:scale-105` },
+                    :
                       React.createElement('div', { className: 'w-full h-full border-2 border-dashed border-blue-200 rounded-lg flex flex-col items-center justify-center text-blue-300' },
                         React.createElement('div', { className: 'w-8 h-8 mb-2', dangerouslySetInnerHTML: { __html: svgIcon('layout') } }),
                         React.createElement('span', { className: 'text-[10px] font-bold uppercase tracking-widest' }, item.category)
                       )
-                    ),
+                  ),
                   React.createElement('div', { className: 'p-6' },
                     React.createElement('h3', { className: 'font-bold text-lg mb-2' }, item.title),
                     React.createElement('p', { className: 'text-sm text-slate-500' }, item.description)
