--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       const [userMessage, setUserMessage] = useState('');
 
       const portfolioItems = [
-        { id: 1, category: 'Instagram', title: 'Product Launch Graphics', description: 'Social media strategy for an e-commerce brand launch.', color: 'bg-blue-50', image: 'https://images.unsplash.com/photo-1592286927505-c80a4eb90fe6?w=400&h=300&fit=crop' },
+        { id: 1, category: 'Instagram', title: 'Product Launch Graphics', description: 'Social media strategy for an e-commerce brand launch.', color: 'bg-blue-50', image: '4.png' },
         { id: 2, category: 'Facebook', title: 'Community Engagement', description: 'Curated posts for a tech support community group.', color: 'bg-blue-100' },
         { id: 3, category: 'Ads', title: 'Shopify Sales Campaign', description: 'High-converting ad copy and creative designs.', color: 'bg-blue-50' },
         { id: 4, category: 'Instagram', title: 'Lifestyle Brand Feed', description: 'Grid planning and aesthetic curation for fashion VA.', color: 'bg-blue-100' },
