--- a/index.html
+++ b/index.html
@@ -547,13 +547,13 @@
                 }, '×')
               ),
               React.createElement('p', { className: 'text-slate-600 mb-6' }, selectedPortfolio.description),
-              React.createElement('div', { className: 'grid grid-cols-1 gap-4' },
+              React.createElement('div', { className: 'grid grid-cols-3 gap-4' },
                 selectedPortfolio.gallery && selectedPortfolio.gallery.map((img, idx) =>
                   React.createElement('img', { 
                     key: idx, 
                     src: img, 
                     alt: `${selectedPortfolio.title} ${idx + 1}`,
-                    className: 'w-full rounded-lg shadow-md'
+                    className: 'w-full rounded-lg shadow-md object-cover h-48'
                   })
                 )
               )
