--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                     key: idx, 
                     src: img, 
                     alt: `${selectedPortfolio.title} ${idx + 1}`,
-                    className: 'w-full rounded-lg shadow-md object-cover h-48'
+                    className: 'w-full rounded-lg shadow-md object-contain'
                   })
                 )
               )
