--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       const portfolioItems = [
         { id: 1, category: 'Instagram', title: 'Product Launch Graphics', description: 'Social media strategy for an e-commerce brand launch.', color: 'bg-blue-50', image: 'product launch graphics/1.png', gallery: ['product launch graphics/2.png', 'product launch graphics/3.png', 'product launch graphics/4.png'] },
-        { id: 2, category: 'Facebook', title: 'Community Engagement', description: 'Curated posts for a tech support community group.', color: 'bg-blue-100', image: 'running.png', gallery: ['giveaway.png', 'thisorthat.png'] },
+        { id: 2, category: 'Facebook', title: 'Community Engagement', description: 'Curated posts for a tech support community group.', color: 'bg-blue-100', image: 'community engagement/running.png', gallery: ['community engagement/giveaway.png', 'community engagement/thisorthat.png'] },
         { id: 3, category: 'Ads', title: 'Shopify Sales Campaign', description: 'High-converting ad copy and creative designs.', color: 'bg-blue-50' },
         { id: 4, category: 'Instagram', title: 'Lifestyle Brand Feed', description: 'Grid planning and aesthetic curation for fashion VA.', color: 'bg-blue-100' },
         { id: 5, category: 'LinkedIn', title: 'B2B Outreach Assets', description: 'Professional infographics for lead generation.', color: 'bg-blue-50' },
