--- a/index.html
+++ b/index.html
@@ -285,6 +285,11 @@
                   title: 'AI Automation', 
                   icon: '<svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg>',
                   list: ['Workflow automation setup and optimization', 'AI-powered chatbot integration', 'Process automation with AI tools', 'Custom automation solutions'] 
+                },
+                { 
+                  title: 'Social Media Management', 
+                  icon: '<svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" /></svg>',
+                  list: ['Content creation and scheduling', 'Social media strategy and planning', 'Community engagement and management', 'Performance analytics and reporting'] 
                 }
               ].map((service, i) =>
                 React.createElement('div', { key: i, className: 'bg-blue-50/30 border border-blue-100 rounded-2xl p-8 hover:border-blue-300 transition-colors' },
