--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                   list: ['Content creation and scheduling', 'Social media strategy and planning', 'Community engagement and management', 'Performance analytics and reporting'] 
                 }
               ].map((service, i) =>
-                React.createElement('div', { key: i, className: 'bg-blue-50/30 border border-blue-100 rounded-2xl p-8 hover:border-blue-300 transition-colors' },
+                React.createElement('div', { key: i, className: `bg-blue-50/30 border border-blue-100 rounded-2xl p-8 hover:border-blue-300 transition-colors ${i === 6 ? 'lg:col-start-2' : ''}` },
                   React.createElement('div', { className: 'flex justify-center mb-6' },
                     React.createElement('div', { className: 'w-14 h-14 bg-blue-600 rounded-xl flex items-center justify-center', dangerouslySetInnerHTML: { __html: service.icon } })
                   ),
