Change Keith Garces link to scroll to top of page

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       return React.createElement('div', { className: 'min-h-screen bg-slate-50 font-sans text-slate-900 scroll-smooth' },
         // Navigation
         React.createElement('nav', { className: 'flex items-center justify-between px-6 py-4 bg-white border-b sticky top-0 z-50' },
-          React.createElement('a', { href: '#header', className: 'text-blue-600 font-bold text-xl hover:text-blue-700 transition-colors' }, 'Keith Garces'),
+          React.createElement('a', { href: '#', className: 'text-blue-600 font-bold text-xl hover:text-blue-700 transition-colors' }, 'Keith Garces'),
           React.createElement('div', { className: 'hidden md:flex space-x-8 text-sm font-medium' },
             React.createElement('a', { href: '#services', className: 'text-slate-600 hover:text-blue-600 transition-colors' }, 'Services'),
             React.createElement('a', { href: '#experience', className: 'text-slate-600 hover:text-blue-600 transition-colors' }, 'Experience'),
