Fix Canva icon display issue

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 { name: 'HubSpot', icon: 'hubspot' },
                 { name: 'Google Workspace', icon: 'google' },
                 { name: 'Notion', icon: 'notion' },
-                { name: 'Canva', iconImage: 'https://upload.wikimedia.org/wikipedia/commons/0/08/Canva_icon_2021.svg' },
+                { name: 'Canva', icon: 'canva' },
                 { name: 'Zapier', icon: 'zapier' },
                 { name: 'MS Office', icon: 'msoffice' },
                 { name: 'ChatGPT', icon: 'chatgpt' },
